# SlightlyBetterText

./: Cargo.toml  README.md  TODO.md  renovate.json
.github/: FUNDING.yml
.github/workflows/: release.yml  rust-clippy.yml  tests.yml
src/: editor.rs  main.rs  settings.rs
src/editor/: editor.rs  mod.rs
